# onepage

./: .gitignore  Cargo.toml  README.md
pages/: index.md  site.webmanifest
pages/assets/: custom.highlight.css  iconfont.css  prism.css  prism.js  style.css  theme.js
pages/favicon/: site.webmanifest
pages/posts/: centos-apps-installation.md  centos-systemctl-java.md  hello-world.md  markdown.md  shanghai-marathon.md  syntax-demo.md  test.md
posts/: abc.md  hello-world.md  test.md
src/: builder.rs  config.rs  constants.rs  index.rs  init.rs  lib.rs  main.rs  markdown.rs  posts.rs  server.rs  templates.rs  utils.rs
src/page/: index.rs  mod.rs  post.rs  posts.rs
src/posts/: markdown.rs  mod.rs  post.rs
static/assets/: style.css
templates/: base.html  index.html  layout.html  post.html
