[package]
name = "onepage"
version = "0.1.5"
edition = "2021"
description = "A simple static site generator"
authors = ["hanpei <hanpei@126.com>"]
keywords = ["markdown", "blog", "static", "site"]
repository = "https://github.com/hanpei/onepage"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = { version = "0.4", features = ["ws", "headers"] }
chrono = "0.4"
clap = "3.1"
gray_matter = "0.2"
hotwatch = "0.4"
lazy_static = "1"
notify = "4"
pulldown-cmark = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tera = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.2", features = ["fs"] }
walkdir = "2"
fs_extra = "1"
reqwest = { version = "0.11", features = ["blocking"] }
tempfile = "3"
zip = "0.6"
